# vortex

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
common/: CMakeLists.txt  core.cpp  core.h  exception.cpp  exception.h  platform.h  string_ex.cpp  string_ex.h  win32_exception.cpp  win32_exception.h
test/: CMakeLists.txt
test/capture_stdout/: CMakeLists.txt  main.cpp
test/stdout_932/: CMakeLists.txt  main.cpp
test/stdout_utf16/: CMakeLists.txt  acp_legacy.manifest  main.cpp
test/unaligned_fullwidth/: CMakeLists.txt  main.cpp
test/utf8_off/: CMakeLists.txt  main.cpp
test/utf8_on/: CMakeLists.txt  main.cpp
test/vt_marquee/: CMakeLists.txt  main.cpp
test/vt_seq/: CMakeLists.txt  main.cpp
